libs/modkit-odata-macros/tests/ui/fail/enum_not_supported.rs
use modkit_odata_macros::ODataSchema;

#[derive(ODataSchema)]
enum Status {
    Active,
    Inactive,
}

fn main() {}
